--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../assets/css/main.css">
+    <link rel="stylesheet" href="./assets/css/main.css">
     <style>
         body {
             margin: 0;
@@ -70,40 +70,9 @@
             font-family: 'Raleway', sans-serif;
             /* Adjust as needed */
         }
-    </style>
-    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
-    <title>AssistOS</title>
-</head>
-
-<body>
-<!--- Nav --->
-<nav class="main-nav" id="main-nav">
-    <div class="logo-img">
-        <img src="../assets/images/demo.png" alt="AssistOS" class="logo">
-    </div>
-    <ul class="main-menu">
-        <li><a href="https://github.com/AssistOS-AI">GitHub </a></li>
-        <li><a href="https://www.youtube.com/@AssistOS-sv2db">YouTube </a></li>
-        <li><a href="https://blog.assistos.net/">Blog </a></li>
-
-        <li>
-            <a href="#contact">
-                <button class="btn-contact">Contact us</button>
-            </a>
-        </li>
-    </ul>
-</nav>
-<br>
-
-<!-- research -->
-<section class="research" id="research">
-    <div class="breakline" style="background-color: transparent;"></div>
-
-    <style>
-        a {
-            text-decoration: none;
-        }
+         a {
+             text-decoration: none;
+         }
 
         body {
             margin: 0;
@@ -155,14 +124,40 @@
             margin-top: 10px;
             font-size: 18px;
             /* Adjust as needed */
-            color: ;
+            /*color: ;*/
             /* Adjust as needed */
             font-family: 'Raleway', sans-serif;
             /* Adjust as needed */
         }
     </style>
-    </head>
+    <link href='https://fonts.googleapis.com/css?family=Raleway' rel='stylesheet'>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
+    <title>AssistOS</title>
+</head>
 
+<body>
+<!--- Nav --->
+<nav class="main-nav" id="main-nav">
+    <div class="logo-img">
+        <img src="./assets/images/demo.png" alt="AssistOS" class="logo">
+    </div>
+    <ul class="main-menu">
+        <li><a href="https://github.com/AssistOS-AI">GitHub </a></li>
+        <li><a href="https://www.youtube.com/@AssistOS-sv2db">YouTube </a></li>
+        <li><a href="https://blog.assistos.net/">Blog </a></li>
+
+        <li>
+            <a href="#contact">
+                <button class="btn-contact">Contact us</button>
+            </a>
+        </li>
+    </ul>
+</nav>
+<br>
+
+<!-- research -->
+<section class="research" id="research">
+    <div class="breakline" style="background-color: transparent;"></div>
     <div>
         <div class="container">
             <div class="video">
@@ -281,7 +276,7 @@
         <div class="demo-container">
             <a href="http://demo.assistos.org:8080/">
                 <div class="demo">
-                    <img src="../assets/images/demo.png" alt="Logo AssistOS">
+                    <img src="./assets/images/demo.png" alt="Logo AssistOS">
                 </div>
             </a>
         </div>
@@ -293,7 +288,7 @@
         <div class="blog-container">
             <a href="https://blog.assistos.net/">
                 <div class="blog">
-                    <img src="../assets/images/blog.png" alt="Image 1">
+                    <img src="./assets/images/blog.png" alt="Image 1">
                     <p>AssistOS</p>
                 </div>
             </a>
@@ -307,57 +302,57 @@
     <div class="axiologic-research-container">
         <a href="https://www.axiologic.net/downloads/assistos_blueprint_report.pdf">
             <div class="axiologicresearchh">
-                <img src="../assets/images/assistos_blueprint.png" alt="Image 1">
+                <img src="./assets/images/assistos_blueprint.png" alt="Image 1">
                 <p>AssistOS Blueprint (2024)</p>
             </div>
             <a href="https://www.axiologic.net/downloads/universe_k_report.pdf">
                 <div class="axiologicresearchh">
-                    <img src="../assets/images/universe_k.png" alt="Image 3">
+                    <img src="./assets/images/universe_k.png" alt="Image 3">
                     <p>Universe K Report (2024)</p>
                 </div>
 
                 <a href="https://www.axiologic.net/downloads/ai_alignment_report.pdf">
                     <div class="axiologicresearchh">
-                        <img src="../assets/images/ai_alignment.png" alt="Image 3">
+                        <img src="./assets/images/ai_alignment.png" alt="Image 3">
                         <p>AI Alignment Research Report (2024)</p>
                     </div>
 
                     <a href="https://www.axiologic.net/downloads/midas_report.pdf">
                         <div class="axiologicresearchh">
-                            <img src="../assets/images/midas.png" alt="Image 3">
+                            <img src="./assets/images/midas.png" alt="Image 3">
                             <p>MIDAS (2024)</p>
                         </div>
 
                         <a href="https://www.axiologic.net/downloads/choreographies_report.pdf">
                             <div class="axiologicresearchh">
-                                <img src="../assets/images/choreographies.png" alt="Image 3">
+                                <img src="./assets/images/choreographies.png" alt="Image 3">
                                 <p>Choreographies, DSUs, SVDs for Multi-Agent Systems (2023)</p>
                             </div>
                             <a href="https://www.axiologic.net/downloads/assistos_report.pdf">
                                 <div class="axiologicresearchh">
-                                    <img src="../assets/images/AssistOS.png" alt="Image 1">
+                                    <img src="./assets/images/AssistOS.png" alt="Image 1">
                                     <p>AssistOS Vision (2023)</p>
                                 </div>
                             </a>
 
                             <a href="https://www.axiologic.net/downloads/ai_market_report.pdf">
                                 <div class="axiologicresearchh">
-                                    <img src="../assets/images/ai_market_evolution.png" alt="Image 2">
+                                    <img src="./assets/images/ai_market_evolution.png" alt="Image 2">
                                     <p>AI Market Evolution Report (2023)</p>
                                 </div>
                             </a>
 
 
                         </a>
-                        <a href="../downloads/super_intelligences_report.pdf">
+                        <a href="./downloads/super_intelligences_report.pdf">
                             <div class="axiologicresearchh">
-                                <img src="../assets/images/super_intelligence.png" alt="Image 3">
+                                <img src="./assets/images/super_intelligence.png" alt="Image 3">
                                 <p>Super Intelligence Classification (2023)</p>
                             </div>
                         </a>
                         <a href="https://www.axiologic.net/downloads/super_intelligences_report.pdf">
                             <div class="axiologicresearchh">
-                                <img src="../assets/images/social_ai.png" alt="Image 1">
+                                <img src="./assets/images/social_ai.png" alt="Image 1">
                                 <p>Social Impact of Controllable AIs (2023)</p>
                             </div>
                         </a>
@@ -379,7 +374,7 @@
     <div class="contact-container">
         <div class="contact-information">
             <div class="image">
-                <img src="../assets/images/contact-mail.svg" alt="mail">
+                <img src="./assets/images/contact-mail.svg" alt="mail">
             </div>
             <div class="text">
                 <p>E-mail</p>
@@ -388,7 +383,7 @@
         </div>
         <div class="contact-information">
             <div class="image">
-                <img src="../assets/images/contact-phone.svg" alt="phone">
+                <img src="./assets/images/contact-phone.svg" alt="phone">
             </div>
             <div class="text">
                 <p>Phone</p>
@@ -398,7 +393,7 @@
         </div>
         <div class="contact-information">
             <div class="image">
-                <img src="../assets/images/contact-location.svg" alt="location">
+                <img src="./assets/images/contact-location.svg" alt="location">
             </div>
             <div class="text">
                 <p>Location</p>
@@ -414,7 +409,7 @@
     <div class="breakline"></div>
     <div class="container-padding">
         <div class="footer-img">
-            <img src="../assets/images/logo.png" alt="Axiologic" class="footer-logo">
+            <img src="./assets/images/logo.png" alt="Axiologic" class="footer-logo">
         </div>
         <ul>
 
